	Modified the scheduling functions so that they return FALSE when the schedule cannot
		accept any more events -- it's at AFTER_SIMULATION or is sealed.  Other invalid
		situations (invalid times, invalid Steppables) still throw an exception.
	Modified Console so that it updates inspectors one last time prior to stopping them.
	Modified ChartGenerator so that the DataSetChangeEvent is fired prior to writing to
		the movie (so any additional modifications to the chart are reflected in that
		movie frame).
	Modifications to ChartGenerator to make it easier to create charts as displays which can
		be used to generate movies.  Update the howto.html documentation to reflect this.
	Revised the SimState constructors -- making deprecated and private constructors protected.
		This makes it easier to use MASON with other toolkits (such as ECJ) which are
		in control of the random number generator.
	Deleted the GUIState.guiObjects variable, created a new variable called 'storage', which
		stores global elements by key.
	Charting inspectors now set their chart titles and axis labels to more useful things
	It's a known bug in JFreeChart: if you have multiple series on a chart, and they're named
		the same name, then only the first one controls the auto range.  :-(
	Further tweaked Console's update of inspectors when stopping them
	Modified SimpleController to update inspectors when stopping them just like Console
	Modified howto.html to show how to propery close and write out movies when finishing
		or quitting if your movie is from a display.
	Made network.directed non-final and private.  Created a new method called isDirected()
		to return direction.   Added network.reset(...) to reset direction. 
	Bug fix to NetworkPortrayal2D, which was drawing and inspecting edges twice if undirected.
		The error shouldn't occur in NetworkPortrayal3D which already does edge hashing
		and so shouldn't have duplicates.
