@@ -2021,4 +2021,9 @@ Version 16
 	Bug fix to NetworkPortrayal2D, which was drawing and inspecting edges twice if undirected.
 		The error shouldn't occur in NetworkPortrayal3D which already does edge hashing
 		and so shouldn't have duplicates.
-
+	Edges are explicitly stated in documentation to hash by reference.
+	Edges now print to strings differently based on whether they're owned, or directed,
+		or undirected
+	Added Edge.isDirected()
+	Fixed bug in NetworkPortrayal2D() when using undirected edges -- not all edges would
+		be displayed (was using edge.getTo() rather than edge.getOtherNode(...))
